WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
95312
REGRESSION(
r126816
): Missing includes when compiling without SVG
https://bugs.webkit.org/show_bug.cgi?id=95312
Summary
REGRESSION(r126816): Missing includes when compiling without SVG
jochen
Reported
2012-08-29 01:51:31 PDT
REGRESSION(
r126816
): Missing includes when compiling without SVG
Attachments
Patch
(1.76 KB, patch)
2012-08-29 01:52 PDT
,
jochen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
jochen
Comment 1
2012-08-29 01:52:20 PDT
Created
attachment 161160
[details]
Patch
Eric Seidel (no email)
Comment 2
2012-08-29 01:53:14 PDT
Comment on
attachment 161160
[details]
Patch Thanks.
WebKit Review Bot
Comment 3
2012-08-29 04:24:00 PDT
Comment on
attachment 161160
[details]
Patch Clearing flags on attachment: 161160 Committed
r126986
: <
http://trac.webkit.org/changeset/126986
>
WebKit Review Bot
Comment 4
2012-08-29 04:24:03 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug