REGRESSION(r126816): Missing includes when compiling without SVG https://bugs.webkit.org/show_bug.cgi?id=95312

Reviewed by Eric Seidel.

* rendering/FilterEffectRenderer.h:
* rendering/RenderLayerFilterInfo.h:


Canonical link: https://commits.webkit.org/113160@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@126986 268f45cc-cd09-0410-ab3c-d52691b4dbfc